--- a/Kmarket/src/main/resources/templates/admin/product/register.html
+++ b/Kmarket/src/main/resources/templates/admin/product/register.html
@@ -14,8 +14,8 @@
     
     	$(function(){
     		
-    		var select1 = $('select[name=category1]');
-    		var select2 = $('select[name=category2]');
+    		var select1 = $('select[name=cate1]');
+    		var select2 = $('select[name=cate2]');
     		
     		
     		// 1차 카테고리 생성
@@ -132,8 +132,9 @@
                 </nav>
                 <!-- 상품등록 컨텐츠 시작 -->
                 <article>
-                    <form action="#">
-
+                    <form th:action="@{/admin/product/register}" method="post" enctype="multipart/form-data">
+						<input type="hidden" name="seller" th:value="${session.sessMember.uid}"/>
+						
                         <!-- 상품분류 -->
                         <section>
                             <h4>상품분류</h4>
@@ -144,7 +145,7 @@
                                 <tr>
                                     <td>1차 분류</td>
                                     <td>
-                                        <select name="category1">
+                                        <select name="cate1">
                                             <option value="0">1차 분류 선택</option>
                                         </select>
                                     </td>
@@ -152,7 +153,7 @@
                                 <tr>
                                     <td>2차 분류</td>
                                     <td>
-                                        <select name="category2">
+                                        <select name="cate2">
                                             <option value="0">2차 분류 선택</option>
                                         </select>
                                     </td>
@@ -169,66 +170,66 @@
                             <table>
                                 <tr>
                                     <td>상품명</td>
-                                    <td><input type="text" name="#"/></td>
+                                    <td><input type="text" name="name"/></td>
                                 </tr>
                                 <tr>
                                     <td>기본설명</td>
                                     <td>
                                         <span>상품명 하단에 상품에 대한 추가적인 설명이 필요한 경우에 입력</span>
-                                        <input type="text" name="#"/>
+                                        <input type="text" name="descript"/>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>제조사</td>
-                                    <td><input type="text" name="#"/></td>
+                                    <td><input type="text" name="company"/></td>
                                 </tr>
                                 <tr>
                                     <td>판매가격</td>
-                                    <td><input type="text" name="#"/>원</td>
+                                    <td><input type="text" name="price" value="0"/>원</td>
                                 </tr>                                    
                                 <tr>
                                     <td>할인율</td>
                                     <td>
                                         <span>0을 입력하면 할인율 없음</span>
-                                        <input type="text" name="#"/>원
+                                        <input type="text" name="discount" value="0"/>원
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>포인트</td>
                                     <td>
                                         <span>0을 입력하면 포인트 없음</span>
-                                        <input type="text" name="#"/>점
+                                        <input type="text" name="point" value="0"/>점
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>재고수량</td>
-                                    <td><input type="text" name="#"/>개</td>
+                                    <td><input type="text" name="stock" value="0"/>개</td>
                                 </tr>
                                 <tr>
                                     <td>배송비</td>
                                     <td>
                                         <span>0을 입력하면 배송비 무료</span>
-                                        <input type="text" name="#"/>원
+                                        <input type="text" name="delivery" value="0"/>원
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>상품 썸네일</td>
                                     <td>
                                         <span>크기 190 x 190, 상품 목록에 출력될 이미지 입니다. </span>
-                                        <input type="file" name="#"/>
+                                        <input type="file" name="thumbFile1"/>
 
                                         <span>크기 230 x 230, 상품 메인에 출력될 이미지 입니다. </span>
-                                        <input type="file" name="#"/>
+                                        <input type="file" name="thumbFile2"/>
 
                                         <span>크기 456 x 456, 상품 상세에 출력될 이미지 입니다. </span>
-                                        <input type="file" name="#"/>
+                                        <input type="file" name="thumbFile3"/>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>상세 상품정보</td>
                                     <td>
                                         <span>크기 가로 940px 높이 제약없음, 크기 최대 1MB, 상세페이지 상품정보에 출력될 이미지 입니다.</span>
-                                        <input type="file" name="#"/>
+                                        <input type="file" name="detailFile4"/>
                                     </td>
                                 </tr>
                             </table>                                
@@ -242,72 +243,24 @@
                             </p>
                             <table>
                                 <tr>
-                                    <td>상품번호</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
                                     <td>상품상태</td>
-                                    <td><input type="text" name=""/></td>
+                                    <td><input type="text" name="status" value="새상품"/></td>
                                 </tr>
                                 <tr>
                                     <td>부가세 면세여부</td>
-                                    <td><input type="text" name=""/></td>
+                                    <td><input type="text" name="dutyFree" value="과세상품"/></td>
                                 </tr>
                                 <tr>
                                     <td>영수증발행</td>
-                                    <td><input type="text" name=""/></td>
+                                    <td><input type="text" name="receipt" value="발행가능"/></td>
                                 </tr>
                                 <tr>
                                     <td>사업자구분</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>브랜드</td>
-                                    <td><input type="text" name=""/></td>
+                                    <td><input type="text" name="bizClass" value="사업자 판매자"/></td>
                                 </tr>
                                 <tr>
                                     <td>원산지</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>제품소재</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>색상</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>치수</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>제조자/수입국</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>제조국</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>취급시 주의사항</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>제조연월</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>품질보증기준</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>A/S 책임자와 전화번호</td>
-                                    <td><input type="text" name=""/></td>
-                                </tr>
-                                <tr>
-                                    <td>주문후 예상 배송기간</td>
-                                    <td><input type="text" name=""/></td>
+                                    <td><input type="text" name="origin" value="국내산"/></td>
                                 </tr>
                             </table>                                
                         </section>
