--- a/Kmarket/src/main/resources/templates/index.html
+++ b/Kmarket/src/main/resources/templates/index.html
@@ -52,10 +52,10 @@
                 <article class="best">
                   <h1><i class="fas fa-crown"></i>베스트상품</h1>
                   <ol>
-                    <li th:each="product:${productsBest}">
+                    <li th:each="product,i:${productsBest}">
                       <a href="#">
                         <div class="thumb">
-                          <i>1</i>
+                          <i>[[${i.index+1}]]</i>
                           <img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="item1">
                         </div>
                         <h2>[[${product.name}]]</h2>
