--- a/Kmarket/src/main/resources/templates/index.html
+++ b/Kmarket/src/main/resources/templates/index.html
@@ -12,21 +12,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <script>
-        $(document).ready(function(){
-          $('.slider > ul').bxSlider({
-              pager: false,
-              easing: 'linear'
-          });
+    
+    	// 슬라이더
+      $(document).ready(function(){
+        $('.slider > ul').bxSlider({
+            pager: false,
+            easing: 'linear'
         });
-      
+      });
+    
+  	
+    	// 베스트상품 영역 고정 스크립트
       $(function(){
-
         var best = $('aside > .best');
-
         $(window).scroll(function(){
-
           var t = $(this).scrollTop();
-
           if(t > 620){
             best.css({
               'position':'fixed',
@@ -37,6 +37,68 @@
           }
         });
       });
+    	
+    	// 추천, 최신, 할인 상품 요청하기
+    	$(function() {
+			
+    		var isRecommendOk 	= false;
+    		var isLatestOk 		= false;
+    		var isDiscountOk	= false;
+    		
+    		var sectionHit 			= $('section.hit');
+    		var sectionRecommend	= $('section.recommend');
+    		var sectionNew 			= $('section.new');
+    		var sectionDiscount 	= $('section.discount');
+    		
+    		$(window).scroll(function() {
+				
+    			var top = $(this).scrollTop();
+    			
+    			//console.log('top : '+top);
+    			
+    			if(top > 0 && !isRecommendOk){
+    				// 추천상품 요청하기
+    				var url = '/getMainProduct?order=score'
+    				$.get(url, function(data) {
+
+    					// loading 이미지 제거
+    					sectionRecommend.find('img[alt=loading]').remove();
+    					
+    					// article 상품정보 출력
+    					$.each(data, function(i, productVo) {
+							
+    						var article = sectionHit.find('article:last-child').clone();
+    						article.find('>a').attr('href', '/product/view');
+    						article.find('.thumb > img').attr('src', '/thumb/'+productVo.cate1+'/'+productVo.cate2+'/'+productVo.thumb1);
+    						article.find('h2').text(productVo.name);
+    						article.find('p').text(productVo.descript);
+    						article.find('.org_price > del').text(productVo.price.toLocaleString());
+    						article.find('.org_price > span').text(productVo.discount+'%');
+    						article.find('.dis_price > ins').text(productVo.salePrice.toLocaleString());
+    						article.find('.dis_price > span').remove();
+    						article.find('.dis_price > strong').remove();
+    						
+    						if(productVo.delivery > 0){
+    							article.find('.dis_price').append('<strong>배송비 '+productVo.delivery.toLocaleString()+'</strong>');
+    						}else{
+    							article.find('.dis_price').append('<span>무료배송</span>'); 
+    						}
+    						
+    						sectionRecommend.append(article);
+						});
+    					
+    				});
+    				
+    				isRecommendOk = true;
+    				
+    			}else if(top > 1000){
+    				// 최신상품 요청하기
+    				
+    			}else if(top > 1500){
+    				// 할인상품 요청하기
+    			}
+			});
+		});
     </script>
 </head>
 <body>
@@ -108,69 +170,18 @@
                 <!-- 추천상품 영역 -->
                 <section class="recommend">
                     <h3><span>추천상품</span></h3>
-                    <article th:each="product:${productsRecommend}">
-                        <a href="#">
-                            <div class="thumb">
-                              <img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="t2">
-                            </div>
-                            <h2>[[${product.name}]]</h2>
-                            <p>[[${product.descript}]]</p>
-                            <div class="org_price">
-                              <del>[[${#numbers.formatInteger(product.price, 3, 'COMMA')}]]</del>
-                              <span>[[${product.discount}]]%</span>
-                            </div>
-                            <div class="dis_price">
-                              <ins>[[${#numbers.formatInteger(product.salePrice, 3, 'COMMA')}]]</ins>
-                             <span th:if="${product.delivery == 0}">무료배송</span>
-                              <strong th:if="${product.delivery != 0}">배송비 [[${#numbers.formatInteger(product.delivery, 3, 'COMMA')}]]</strong>
-                            </div>
-                        </a>
-                    </article>
+                    <img th:src="@{/img/loading.gif}" style="display: block; margin: 0 auto;" alt="loading"/>
                 </section>
                 <!-- 최신상품 영역 -->
                 <section class="new">
                     <h3><span>최신상품</span></h3>
-                    <article th:each="product:${productsLatest}">
-                        <a href="#">
-                            <div class="thumb">
-                              <img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="t2">
-                            </div>
-                            <h2>[[${product.name}]]</h2>
-                            <p>[[${product.descript}]]</p>
-                            <div class="org_price">
-                              <del>[[${#numbers.formatInteger(product.price, 3, 'COMMA')}]]</del>
-                              <span>[[${product.discount}]]%</span>
-                            </div>
-                            <div class="dis_price">
-                              <ins>[[${#numbers.formatInteger(product.salePrice, 3, 'COMMA')}]]</ins>
-                             <span th:if="${product.delivery == 0}">무료배송</span>
-                              <strong th:if="${product.delivery != 0}">배송비 [[${#numbers.formatInteger(product.delivery, 3, 'COMMA')}]]</strong>
-                            </div>
-                        </a>
-                    </article>
+                    <img th:src="@{/img/loading.gif}" style="display: block; margin: 0 auto;" alt="loading"/>
                     
                 </section>
                 <!-- 할인상품 영역 -->
                 <section class="discount">
                     <h3><span>할인상품</span></h3>
-                   <article th:each="product:${productsDiscount}">
-                        <a href="#">
-                            <div class="thumb">
-                              <img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="t2">
-                            </div>
-                            <h2>[[${product.name}]]</h2>
-                            <p>[[${product.descript}]]</p>
-                            <div class="org_price">
-                              <del>[[${#numbers.formatInteger(product.price, 3, 'COMMA')}]]</del>
-                              <span>[[${product.discount}]]%</span>
-                            </div>
-                            <div class="dis_price">
-                              <ins>[[${#numbers.formatInteger(product.salePrice, 3, 'COMMA')}]]</ins>
-                             <span th:if="${product.delivery == 0}">무료배송</span>
-                              <strong th:if="${product.delivery != 0}">배송비 [[${#numbers.formatInteger(product.delivery, 3, 'COMMA')}]]</strong>
-                            </div>
-                        </a>
-                    </article>
+                   	<img th:src="@{/img/loading.gif}" style="display: block; margin: 0 auto;" alt="loading"/>
                 </section>
             </section>
         </main>
