--- a/Kmarket/src/main/resources/templates/member/_header.html
+++ b/Kmarket/src/main/resources/templates/member/_header.html
@@ -1,3 +1,3 @@
 <header>
-	<a href="#"><img th:src="@{/img/header_logo.png}" alt=""></a>
+	<a th:href="@{/}"><img th:src="@{/img/header_logo.png}" alt=""></a>
 </header>
