--- a/Kmarket/src/main/resources/static/css/style.css
+++ b/Kmarket/src/main/resources/static/css/style.css
@@ -1004,6 +1004,46 @@ h5.rating.star5 {background-position: 0 -200px;}
     content: "원";
 }
 
+#view .info > .summary .count{
+	position:relative;
+	width: 100px;
+	height: 60px;
+}
+
+#view .info > .summary .count > button{
+	position: absolute;
+ 	width: 21px;
+    height: 21px;
+    background-image: url('/img/kmarket_buttons.png');
+   	font-size: 0;
+    background-color: transparent;
+    border: none;
+}
+                    	
+#view .info > .summary .count > .decrease {
+	left:0;
+	top:0;
+	background-position: 0px -74px;
+}
+#view .info > .summary .count > .decrease:hover {background-position: -24px -74px;}
+#view .info > .summary .count > .increase {
+	left:70px;
+	top:0;
+	background-position: -48px -74px;
+}
+#view .info > .summary .count > .increase:hover {background-position: -72px -74px;}
+
+#view .info > .summary .count > input[name=num]{
+	position: absolute;
+	left: 30px;
+	top: 0;
+	width: 30px;
+	height: 21px;
+	border: 1px solid #ececec;
+	font-size: 14px;
+	text-align: center;
+}
+
 #view .info > .summary .total {
     overflow: hidden;
     margin-top: 16px;
