--- a/Kmarket/src/main/resources/templates/product/list.html
+++ b/Kmarket/src/main/resources/templates/product/list.html
@@ -52,12 +52,12 @@
                 <article th:each="product:${products}">
                   <ul>
                     <li>
-                      <a th:href="@{/product/view}" class="thumb"><img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="상품이미지"/></a>
+                      <a th:href="@{/product/view(productCode=${product.productCode})}" class="thumb"><img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="상품이미지"/></a>
                     </li>
                     <li>
                       <h3 class="name">[[${product.name}]]</h3>
                       <p class="desc">
-                        <a href="#">[[${product.descript}]]</a>
+                        <a th:href="@{/product/view(productCode=${product.productCode})}">[[${product.descript}]]</a>
                       </p>
                     </li>
                     <li>
